--- a/style.css
+++ b/style.css
@@ -39,3 +39,12 @@ h1 {
 .hidden {
     display: none;
 }
+
+ul {
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-size: 20px;
+    font-style: normal;
+    text-align: center;
+    list-style-type: none;
+}
