--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ h1 {
     font-size: 100px;
     font-style: normal; 
     text-align: center;
-    text-shadow: 2px 2px 5px gray;
+    color: aliceblue;
+    text-shadow: 2px 2px 5px #8CE5F7;
 }
 
 .btn {
@@ -19,7 +20,7 @@ h1 {
 }
 
 .btn:hover {
-    background-color: black;
+    background-color: #054350;
     color: whitesmoke;
     transform: scale(1.2);
 }
@@ -47,4 +48,8 @@ ul {
     font-style: normal;
     text-align: center;
     list-style-type: none;
+}
+
+body {
+    background-color: #0D7B92;
 }
